FIX css print view, curator approve/reject border
Testers complain that the print view is all messed up.  Looks like this
is primarily due to Bootstrap printing out the links by default in the
print view. Used an override to disable this feature.

The curator approve/reject control section has messed up borders that
overlaps with the help text. It was using bootstrap's input groups
feature in a weird way. Replaced the entire section with a table so that
it'll maintain the proper borders.

Implements task 105 in #67.

--- a/dspace-jspui/src/main/webapp/static/ubc/statspace-custom.css
+++ b/dspace-jspui/src/main/webapp/static/ubc/statspace-custom.css
@@ -16,6 +16,14 @@ and lacks some bootstrap 3 features. */
 	background: #f2dede;
 }
 
+/* Override default bootstrap setting where links are printed in print view */
+@media print {
+  a[href]:after {
+    content: none
+  }
+}
+
+
 /* Edit Metadata / Describe Step */
 .editMetadataTripleLevelDropdown select {
 	margin-bottom: 0.5em;
